<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirenzeStreets</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="mappa_incidenti">Mappa incidenti</string>
    <string name="list">Lista</string>
    <string name="filter">Filtra</string>
    <string name="compare">Compara</string>
    <string name="setting">Impostazioni</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_show_street">ShowStreetActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="erroreIdIndirizzo">Errore selezione indirizzo!</string>
    <string name="title_activity_filter">Filtri</string>
    <string name="mark">-Loading-</string>

    <string-array name="compareArray">
        <item>Maggiore di&#8230;</item>
        <item>Minore di&#8230;</item>
    </string-array>
<<<<<<< HEAD
    <string name="showOnMap">Visualizza</string>
    <string name="total">Totale</string>
    <string name="morti">Morti: </string>
    <string name="lesioni">Lesioni: </string>
    <string name="contusi">Contusi: </string>
    <string name="zero">0</string>
    <string name="aggiornaDb">Aggiorna Database</string>
=======

    <string name="showOnMap">Visualizza</string>
    <string name="total">Totale</string>
    <string name="morti">Morti: </string>
    <string name="lesioni">Lesioni: </string>
    <string name="contusi">Contusi: </string>
    <string name="zero">0</string>
    <string name="title_activity_list">ListActivity</string>
>>>>>>> 561a41d356f2826f377fd0df45f307d4b15948d1

</resources>