<GridLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@drawable/map"
            android:contentDescription="@string/mappa_incidenti"
            android:onClick="onClick" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/mappa_incidenti" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@drawable/list"
            android:contentDescription="@string/list"
            android:onClick="onClick" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/list" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@drawable/filter"
            android:contentDescription="@string/filter"
            android:onClick="onClick" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/filter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@drawable/setting"
            android:contentDescription="@string/setting"
            android:onClick="onClick" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/setting" />
    </LinearLayout>
    
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@drawable/compare"
            android:contentDescription="@string/compare"
            android:onClick="onClick" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/compare" />
    </LinearLayout>

</GridLayout>